<resources>
    <string name="app_name">UserCenter</string>
    <string name="icon_delete">icon_delete</string>
    <string name="hello">您好，</string>
    <string name="wellcome_qingning">欢迎来到清柠汽车</string>
    <string name="mobile">手机号码</string>
    <string name="service_agreement">服务协议</string>
    <string name="next_step">下一步</string>
    <string name="vertifycode">请输入验证码</string>
    <string name="passworld">请输入密码</string>
    <string name="logo">logo</string>
    <string name="input_vertify_code">输入验证码</string>
    <string name="vertify_code_send_to">验证码已发送至</string>
    <string name="login">登录</string>
</resources>
