<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.RegisterActivity">

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2" app:layout_constraintGuide_begin="25dp"
                                          android:orientation="vertical"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline5"
                                          android:orientation="vertical" app:layout_constraintGuide_end="25dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline7" app:layout_constraintGuide_begin="50dp"
                                          android:orientation="horizontal"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close"
            android:id="@+id/btnClose"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:contentDescription="@string/icon_delete"/>
    <TextView
            android:text="@string/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textColor="@color/txt_1F2E4A"
            android:textSize="@dimen/sp_32"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="@+id/btnClose"/>
    <TextView
            android:text="@string/wellcome_qingning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textSize="@dimen/sp_20"
            android:textColor="@color/txt_1F2E4A"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tipsTv" android:textColor="@color/txt_9B9B9B"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:visibility="invisible"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/mobileTv"
            android:hint="@string/mobile" android:textSize="@dimen/sp_18" android:textColor="@color/txt_1F2E4A"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/tipsTv"
            android:importantForAutofill="no" tools:targetApi="o" android:maxLength="@integer/mobile_size"/>
    <Button
            android:text="@string/next_step"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:id="@+id/nextStep"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            android:layout_marginTop="48dp"
            android:background="@drawable/submit_select"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/mobileTv" android:textSize="@dimen/sp_18"
            android:textColor="@color/txt_FFFFFFFF"/>
</android.support.constraint.ConstraintLayout>