<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="25dp"
                                          android:orientation="vertical"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline3"
                                          android:orientation="vertical" app:layout_constraintGuide_end="25dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline4" app:layout_constraintGuide_begin="50dp"
                                          android:orientation="horizontal"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:contentDescription="@string/icon_delete"/>
    <TextView
            android:text="@string/input_vertify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="@dimen/sp_32"
            android:textColor="@color/txt_1F2E4A"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <TextView
            android:text="@string/vertify_code_send_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="@dimen/sp_20"
            android:textColor="@color/txt_1F2E4A" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>
    <TextView
            android:text="@string/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mobileTv" android:textSize="@dimen/sp_20"
            android:textColor="@color/colorPrimary" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="3dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/code"
            android:textColor="@color/txt_1F2E4A" android:textSize="@dimen/sp_32"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:importantForAutofill="no" tools:targetApi="o"
            android:maxLength="6"
            android:hint="@string/input_vertify_code" android:letterSpacing="1.0"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginTop="80dp"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/code" android:background="@drawable/submit_select"
            android:textSize="@dimen/sp_18" android:textColor="@color/txt_FFFFFFFF"/>
</android.support.constraint.ConstraintLayout>